--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dj-rest-auth = "^5.1.0"
 psycopg2 = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 pillow = "^10.3.0"
+flake8 = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 drf-spectacular = "^0.27.2"
