--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,15 @@ dj-rest-auth = "^5.1.0"
 psycopg2 = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 pillow = "^10.3.0"
-flake8 = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 drf-spectacular = "^0.27.2"
-pytest-django = "^4.8.0"
 pre-commit = "^3.7.0"
+pytest-django = "^4.8.0"
+pytest-xdist = "^3.5.0"
 isort = "^5.13.2"
 black = "^24.3.0"
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
