feat: add pytest in github action ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: "main"
+    branches: ["main"]
   pull_request:
-    branches: "main"
+    branches: ["main"]
 
 jobs:
   linter:
@@ -22,3 +22,19 @@ jobs:
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
+
+  pytest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python manage.py migrate --settings=backend.settings_test
+      - name: Test with pytest
+        run: pytest -n 3
