fix: add pytest-xdist to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,9 @@ djangorestframework-simplejwt==5.3.1 ; python_version >= "3.12" and python_versi
 djangorestframework==3.15.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:3ccc0475bce968608cf30d07fb17d8e52d1d7fc8bfe779c905463200750cbca6 \
     --hash=sha256:f88fad74183dfc7144b2756d0d2ac716ea5b4c7c9840995ac3bfd8ec034333c1
+execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:26dee51f1b80cebd6d0ca8e74dd8745419761d3bef34163928cbebbdc4749fdc \
+    --hash=sha256:5189b52c6121c24feae288166ab41b32549c7e2348652736540b9e6e7d4e72e3
 factory-boy==3.3.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:a2cdbdb63228177aa4f1c52f4b6d83fab2b8623bf602c7dedd7eb83c0f69c04c \
     --hash=sha256:bc76d97d1a65bbd9842a6d722882098eb549ec8ee1081f9fb2e8ff29f0c300f1
@@ -216,6 +219,9 @@ pyjwt==2.8.0 ; python_version >= "3.12" and python_version < "4.0" \
 pytest-django==4.8.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:5d054fe011c56f3b10f978f41a8efb2e5adfc7e680ef36fb571ada1f24779d90 \
     --hash=sha256:ca1ddd1e0e4c227cf9e3e40a6afc6d106b3e70868fd2ac5798a22501271cd0c7
+pytest-xdist==3.5.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:cbb36f3d67e0c478baa57fa4edc8843887e0f6cfc42d677530a36d7472b32d8a \
+    --hash=sha256:d075629c7e00b611df89f490a5063944bee7a4362a5ff11c7cc7824a03dfce24
 pytest==8.1.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:2a8386cfc11fa9d2c50ee7b2a57e7d898ef90470a7a34c4b949ff59662bb78b7 \
     --hash=sha256:ac978141a75948948817d360297b7aae0fcb9d6ff6bc9ec6d514b85d5a65c044
