--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ djangorestframework-simplejwt = "^5.3.1"
 pillow = "^10.3.0"
 pytest-xdist = "^3.5.0"
 drf-spectacular = "^0.27.2"
+pyjwt = "^2.8.0"
+pymemcache = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
