--- a/requirements.txt
+++ b/requirements.txt
@@ -231,6 +231,9 @@ psycopg2==2.9.9 ; python_version >= "3.12" and python_version < "4.0" \
 pyjwt==2.8.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:57e28d156e3d5c10088e0c68abb90bfac3df82b40a71bd0daa20c65ccd5c23de \
     --hash=sha256:59127c392cc44c2da5bb3192169a91f429924e17aff6534d70fdc02ab3e04320
+pymemcache==4.0.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:27bf9bd1bbc1e20f83633208620d56de50f14185055e49504f4f5e94e94aff94 \
+    --hash=sha256:f507bc20e0dc8d562f8df9d872107a278df049fa496805c1431b926f3ddd0eab
 pytest-django==4.8.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:5d054fe011c56f3b10f978f41a8efb2e5adfc7e680ef36fb571ada1f24779d90 \
     --hash=sha256:ca1ddd1e0e4c227cf9e3e40a6afc6d106b3e70868fd2ac5798a22501271cd0c7
