feat: board and post together & seeding

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,11 @@ DEBUG=True
 ALLOWED_HOSTS=example.com,api.example.com,localhost,127.0.0.1
 CORS_ORIGIN_WHITELIST=http://127.0.0.1:3000,http://localhost:3000
 
+# Django Admin Settings
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+ADMIN_EMAIL=admin@admin.com
+
 # Django Database Settings
 DB_NAME=card_deck
 DB_USER=cardist
