--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ pre-commit = "^3.7.0"
 gunicorn = "^21.2.0"
 pytest-django = "^4.8.0"
 dj-rest-auth = "^5.1.0"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 pillow = "^10.3.0"
 pytest-xdist = "^3.5.0"
